# rinha

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf  payments.db
.github/workflows/: publish-dockerhub.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
app_db/: snap.00000000023DF9B6
gateway/: Cargo.toml  Dockerfile
gateway/src/: main.rs
rinha-db/: Cargo.toml  Dockerfile  README.md
rinha-db/benches/: my_benchmark.rs
rinha-db/src/: main.rs  storage.rs
rinha-test/: rinha.js
shared-types/: Cargo.toml
shared-types/src/: lib.rs
src/: main.rs  types.rs
src/provider/: handler.rs  mod.rs  provider.rs
