[package]
name = "rinha"
version = "0.1.0"
edition = "2024"
authors = ["Diego Reis"]
license = "MIT"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = "0.4.41"
reqwest = { version = "0.12.22", features = ["json"] }
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde"] }
