[package]
name = "rinha"
version = "0.1.0"
edition = "2024"
authors = ["Diego Reis"]
license = "MIT"

[dependencies]
anyhow = "1.0.98"
async-channel = "2.5.0"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = "fat"
