[workspace]
members = ["rinha-db", "api", "gateway", "shared-types"]

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde"] }
shared-types = { path = "shared-types" }
