[package]
name = "api"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Diego Reis"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
shared-types = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
async-channel = "2.5.0"
reqwest = { version = "0.12.22", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = "fat"
